[package]
name = "ietf"
version = "0.1.0"
authors = ["cy6erlion <dev@merely.tech>"]
edition = "2018"
description = "A program to read IETF RFCs in the terminal."
homepage = "https://github.com/cy6erlion/ietf"
documentation = "https://github.com/cy6erlion/ietf/blob/master/README.md#guide"
repository = "https://github.com/cy6erlion/ietf"
readme = "README.md"
keywords = ["cli", "RFC", "IETF", "Pager"]
categories = ["command-line-utilities"]

license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For parsing command line arguments
clap = "2.33.3"
# Minimal HTTP client
minreq = {version = "2.2.1", features = ["https"]}
# Pager
pager = "0.16.0"
# Directories
dirs-next = "2.0.0"