[package]
name = "ietf"
version = "0.2.1"
authors = ["cy6erlion <dev@merely.tech>"]
edition = "2018"
description = "A program to read IETF RFCs in the terminal."
homepage = "https://github.com/cy6erlion/ietf"
documentation = "https://github.com/cy6erlion/ietf/blob/master/README.md#guide"
repository = "https://github.com/cy6erlion/ietf"
readme = "README.md"
keywords = ["cli", "RFC", "IETF", "Pager"]
categories = ["command-line-utilities"]

license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For parsing command line arguments
clap = "2.33.3"

# Minimal HTTP clientn
minreq = {version = "2.3.0", features = ["https"]}

# Directories
dirs-next = "2.0.0"

# Terminal User Interface
cursive = "0.16"
